@@ -1420,9 +1420,9 @@ enum {
   /* The next two pairs must (respectively) be kept together. */
 
   OP_CREF,           /* 100 Used to hold a capture number as condition */
-  OP_NCREF,          /* 101 Same, but generaged by a name reference*/
+  OP_NCREF,          /* 101 Same, but generated by a name reference*/
   OP_RREF,           /* 102 Used to hold a recursion number as condition */
-  OP_NRREF,          /* 103 Same, but generaged by a name reference*/
+  OP_NRREF,          /* 103 Same, but generated by a name reference*/
   OP_DEF,            /* 104 The DEFINE condition */
 
   OP_BRAZERO,        /* 105 These two must remain together and in this */
@@ -1855,7 +1855,7 @@ extern const int         _pcre_ucp_gentype[];
 #define UCD_BLOCK_SIZE 128
 #define GET_UCD(ch) (_pcre_ucd_records + \
         _pcre_ucd_stage2[_pcre_ucd_stage1[(ch) / UCD_BLOCK_SIZE] * \
-        UCD_BLOCK_SIZE + ch % UCD_BLOCK_SIZE])
+        UCD_BLOCK_SIZE + (ch) % UCD_BLOCK_SIZE])
 
 #define UCD_CHARTYPE(ch)  GET_UCD(ch)->chartype
 #define UCD_SCRIPT(ch)    GET_UCD(ch)->script
